--- a/public/global.css
+++ b/public/global.css
@@ -5,7 +5,8 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: #ccc;
+  background-color: #000;
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
@@ -105,6 +106,10 @@ input {
   font-size: 1.2em;
 }
 
+input.small {
+  width: 60%;
+}
+
 input:disabled {
 	color: #ccc;
 }
@@ -135,7 +140,7 @@ button:focus {
   background-color: #ff400028;
 }
 .bl {
-  color: #333;
+  color: #ccc;
   background-color: #33333328;
 }
 .gr {
